# xournalpp

./: .autotools  .cirrus.yml  .clang-format  .clang-tidy  .cproject  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .project  .test.h  .tieffrequente_geraeusche_inkl_infraschall2.pdf.autosave.xoj  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTING.md  COPYING  Dockerfile  Doxyfile  Makefile.am  Makefile.in  NEWS  PreLoad.cmake  README  README.md  ZOOM_DRAW_FEATURE.md  aclocal.m4  appimagecraft.yml  azure-pipelines.yml  build-flatpack.sh  build_release.sh  check-source.sh  com.github.xournalpp.xournalpp.yaml  config.guess  config.h  config.h.in  config.h.in~  config.sub  (+19 more)
base/: CMakeLists.txt
base/exe/: xournalppmain.cpp
base/resources/: config.gresource.xml  toolbar.ini
gtest/: CMakeLists.txt  README.md  config-test.h.in
gtest/files/: preview-test-invalid.xoj
man/: CMakeLists.txt  extra.groff
src/: CMakeLists.txt  CMakeLists.txt.orig  Dispatcher.cpp  Dispatcher.h  Makefile.am  Makefile.in  TODO  Xournalpp.cpp  Xournalpp.h  cfg.h  config-debug.h.in  config-dev.h.in  config-features.h.in  config-git.h.in  config-paths.h.in  config.h  config.h.in  filesystem.h.in  gettext.h  shadowCode.c  toolbar.ini.h
src/audio/: alrecord  alrecord.c  alrecord.h
src/collab/: Collaboration.cpp  Collaboration.h  Makefile.am  Makefile.in  Message.cpp  Message.h
src/control/: Action.cpp  Action.h  ActionListener.cpp  ActionListener.h  Actions.cpp  Actions.h  AudioController.cpp  AudioController.h  AudioControllerImpl.cpp  AudioControllerImpl.h  BackgroundThreadHandler.cpp  BackgroundThreadHandler.h  ClipboardHandler.cpp  ClipboardHandler.h  Control.cpp  Control.h  CrashHandlerUnix.h  Cursor.cpp  Cursor.h  Dispatcher.cpp  Dispatcher.h  EditSelection.cpp  EditSelection.h  ExportHandler.cpp  ExportHandler.h  FullscreenHandler.cpp  FullscreenHandler.h  LastSelectedTool.cpp  LastSelectedTool.h  LatexController.cpp  LatexController.h  LayerController.cpp  LayerController.h  LoadHandler.cpp  LoadHandler.h  PageBackgroundChangeController.cpp  PageBackgroundChangeController.h  PdfCache.cpp  PdfCache.h  PrintHandler.cpp  (+38 more)
src/core/: CMakeLists.txt  Xournalpp.cpp
src/enums/: ActionGroup.enum.h  ActionType.enum.h  generateConvert.php
src/exe/: CMakeLists.txt  Xournalpp-wrapper.cpp  Xournalpp.cpp  xournalpp-wrapper.gresource.xml
src/gui/: AboutDialog.cpp  AboutDialog.h  ButtonConfig.h  ControllerView.cpp  ControllerView.h  Cursor.cpp  Cursor.h  CursorTheme.cpp  CursorTheme.h  ExportDialog.cpp  ExportDialog.h  FloatingToolbox.cpp  FloatingToolbox.h  FormatDialog.cpp  FormatDialog.h  GladeGui.cpp  GladeGui.h  GladeSearchpath.cpp  GladeSearchpath.h  IconNameHelper.cpp  ImagesDialog.cpp  ImagesDialog.h  Layout.cpp  Layout.h  LayoutData.cpp  LayoutData.h  LayoutEvent.h  LayoutMapper.cpp  LayoutMapper.h  MainWindow.cpp  MainWindow.h  MainWindowToolbarMenu.cpp  MainWindowToolbarMenu.h  Makefile.in  PageView.cpp  PageView.h  PageViewFindObjectHelper.h  PdfPagesDialog.cpp  PdfPagesDialog.h  PresentationLaser.cpp  (+35 more)
src/librarywrapper/: DrawingManagerWrapper.h
src/mathtex/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  mathtex-xournalpp.cgi  mathtex.c  mathtex.html
src/model/: AudioElement.cpp  AudioElement.h  BackgroundImage.cpp  BackgroundImage.h  BackgroundImageContents.cpp  BackgroundImageContents.h  BackgroundType.h  Document.cpp  Document.h  DocumentChangeType.h  DocumentHandler.cpp  DocumentHandler.h  DocumentListener.cpp  DocumentListener.h  Element.cpp  Element.h  EraseableStroke.cpp  EraseableStroke.h  Font.cpp  Font.h  FormatDefinitions.cpp  FormatDefinitions.h  Image.cpp  Image.h  Layer.cpp  Layer.h  LayerListener.cpp  LayerListener.h  LineStyle.cpp  LineStyle.h  LinkDestination.cpp  LinkDestination.h  MathVect.cpp  MathVect.h  Page.cpp  Page.h  PageHandler.cpp  PageHandler.h  PageListener.cpp  PageListener.h  (+41 more)
src/osx/: setup-env.cpp  setup-env.h
src/pdf/: PdfBookmark.cpp  PdfBookmark.h  PdfExport.cpp  PdfExport.h  PdfExportImage.h  PdfExtGState.cpp  PdfExtGState.h  PdfFont.cpp  PdfFont.h  PdfObjectWriter.cpp  PdfObjectWriter.h  PdfRefEntry.cpp  PdfRefEntry.h  PdfRefList.cpp  PdfRefList.h  PdfUtil.cpp  PdfUtil.h  PdfWriter.cpp  PdfWriter.h  PdfXRef.cpp  PdfXRef.h  UpdateRef.cpp  UpdateRef.h  UpdateRefKey.cpp  UpdateRefKey.h
src/plugin/: Plugin.cpp  Plugin.h  PluginController.cpp  PluginController.h  luapi_application.h
src/runtime-deps/: CMakeLists.txt  LibraryHandle.cpp  LibraryHandle.h
src/test/: TestMain.cpp
src/undo/: AddUndoAction.cpp  AddUndoAction.h  ArrangeUndoAction.cpp  ColorUndoAction.cpp  ColorUndoAction.h  CopyUndoAction.cpp  CopyUndoAction.h  DeleteUndoAction.cpp  DeleteUndoAction.h  EmergencySaveRestore.cpp  EmergencySaveRestore.h  EraseUndoAction.cpp  EraseUndoAction.h  FillUndoAction.cpp  FillUndoAction.h  FontUndoAction.cpp  FontUndoAction.h  GroupUndoAction.cpp  GroupUndoAction.h  InsertDeletePageUndoAction.cpp  InsertDeletePageUndoAction.h  InsertLayerUndoAction.cpp  InsertLayerUndoAction.h  InsertUndoAction.cpp  InsertUndoAction.h  LayerRenameUndoAction.cpp  LayerRenameUndoAction.h  LineStyleUndoAction.cpp  MoveUndoAction.cpp  (+31 more)
test/: CMakeLists.txt  CMakeLists.txt.orig  README.md  SpeedTest.cpp  TestMain.cpp  config-test.h.in  main.cpp
ui/: #texdialog.glade#  Makefile.am  Makefile.in  README.md  about.glade  about.ui  backgroundSelection.glade  backgroundSelection.ui  bookmarkDialog.glade  crashDialog.glade  crashDialog.ui  customThickness.glade  deviceList.glade  deviceList.ui  deviceTestingArea.glade  deviceTestingArea.ui  export.glade  exportSettings.glade  exportSettings.ui  extEdTexDialog.glade  extEdTexDialog.ui  fillOpacity.glade  fillTransparency.glade  goto.glade  goto.ui  goto.xml  homepage.glade  imageProperties.glade  images.glade  images.xml  intEdTexDialog.glade  intEdTexDialog.ui  latexSettings.glade  latexSettings.ui  linkDialog.glade  linkDialog.ui  main.glade  main.glade.orig  main.ui  mainmenubar.ui  (+48 more)
(+3251 files in other folders)
